make toggle fixed so it stays visible while scrolling

--- a/client/src/styles/components/sidebar-layout.scss
+++ b/client/src/styles/components/sidebar-layout.scss
@@ -127,9 +127,9 @@
       position: relative;
 
       .left-pane-toggle {
-        position: absolute;
-        left: 0;
-        top: 88px;
+        position: fixed;
+        margin-left: calc(var(--spacing-lg) * -1);
+        margin-top: 88px;
         background-color: var(--color-gray-light);
         width: 2rem;
         height: 2rem;
